--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "less": "^4.1.3",
+    "sass": "^1.56.1",
     "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
