--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.6.4",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
+    "vite-plugin-fonts": "^0.6.0",
     "vue-tsc": "^1.0.9"
   }
 }
