--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vite-svg-loader": "^3.6.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
@@ -19,6 +20,7 @@
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3",
     "vite-plugin-fonts": "^0.6.0",
+    "vite-plugin-pages": "^0.27.1",
     "vue-tsc": "^1.0.9"
   }
 }
