--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vite": "^3.2.3",
     "vite-plugin-fonts": "^0.6.0",
     "vite-plugin-pages": "^0.27.1",
+    "vite-plugin-vue-layouts": "^0.7.0",
     "vue-tsc": "^1.0.9"
   }
 }
