--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pinia": "^2.0.27",
     "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.41",
     "vue-router": "4"
