--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "click-outside-vue3": "^4.0.1",
     "pinia": "^2.0.27",
     "vite-svg-loader": "^3.6.0",
     "vue": "^3.2.41",
